# cmake_linux_windows

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
