cmake_minimum_required(VERSION 3.25)

project(ktb LANGUAGES CXX)

find_package(wxWidgets REQUIRED core base OPTIONAL_COMPONENTS net)

set(BUNDLE "")

if(wxWidgets_FOUND)
	if(LINUX)
		set(BUNDLE "")
		# add_executable(${PROJECT_NAME} main.cpp)
		# target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES})
	elseif(WIN32 OR MSVC OR MSYS OR MINGW)
		if(wxWidgets_USE_FILE)
			include(${wxWidgets_USE_FILE})
		endif()
		set(BUNDLE "WIN32")
		# add_executable(${PROJECT_NAME} WIN32 main.cpp)
		# target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES})
	else()
		set(BUNDLE "MACOSX_BUNDLE")
		# target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES})
	endif()

	add_executable(${PROJECT_NAME} ${BUNDLE} main.cpp)
	target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES})
else()
	message("No wxWidgets distribution found. ")
endif()
