cmake_minimum_required(VERSION 3.25)

project(ktb LANGUAGES CXX)

find_package(wxWidgets REQUIRED core base OPTIONAL_COMPONENTS net)

set(BUNDLE "")

if(wxWidgets_FOUND)
	if(LINUX)
		set(BUNDLE "")
		include(${wxWidgets_USE_FILE})
	elseif(WIN32 OR MSVC OR MSYS OR MINGW)
		set(BUNDLE "WIN32")
		if(wxWidgets_USE_FILE)
			include(${wxWidgets_USE_FILE})
		endif()
	else()
		set(BUNDLE "MACOSX_BUNDLE")
	endif()
	add_executable(${PROJECT_NAME} ${BUNDLE} main.cpp)
	target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES})
else()
	message("No wxWidgets distribution found.")
endif()
